# advent-of-code

./: CMakeLists.txt
src/: CMakeLists.txt  adventofcode.hpp  main.cpp
src/day01/: CMakeLists.txt  puzzle.cpp  puzzle.hpp  puzzleA.cpp  puzzleA.hpp
src/day02/: CMakeLists.txt  puzzle.cpp  puzzle.hpp
src/day03/: puzzle.cpp  puzzle.hpp
src/day04/: puzzle.cpp  puzzle.hpp
src/day05/: puzzle.cpp
src/day06/: puzzle.cpp
src/day07/: puzzle.cpp
src/day08/: puzzle.cpp
src/day09/: puzzle.cpp
src/day10/: puzzle.cpp
src/day11/: puzzle.cpp
src/day12/: puzzle.cpp
src/day13/: puzzle.cpp
src/day14/: puzzle.cpp
src/day15/: puzzle.cpp
src/day16/: CMakeLists.txt  notes.md  puzzle.cpp  puzzle.hpp  puzzle_graph.cpp  puzzle_io.cpp
src/day17/: puzzle.cpp
src/day18/: puzzle.cpp
src/day19/: puzzle.cpp
src/day20/: puzzle.cpp
src/day21/: puzzle.cpp
src/day22/: puzzle.cpp
src/day23/: puzzle.cpp
src/day24/: puzzle.cpp
src/day25/: notes.txt  puzzle.cpp  snafu.txt
src/iosupport/: CMakeLists.txt  iosupport.cpp  iosupport.hpp
src/utilities/: CMakeLists.txt  binary.cpp  binary.hpp
