add_executable(advent main.cpp)
target_include_directories(advent PRIVATE .)
add_subdirectory(iosupport)
add_subdirectory(utilities)
add_subdirectory(day01)
add_subdirectory(day02)
add_subdirectory(day03)
add_subdirectory(day04)
add_subdirectory(day05)
add_subdirectory(day06)
add_subdirectory(day07)
